--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
     "Accès",
     "fonctionnalite",
     "fonctionnalité",
+    "fullscreen",
     "manifestes",
+    "Ouvrir",
     "rapide"
   ]
 }
